idblu_tts_wrapper/k8s/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idblu-tts
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/environment: staging
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: idblu-eks-shared-gpu
      containers:
        - name: idblu-tts
          image: 449678530532.dkr.ecr.ca-central-1.amazonaws.com/idblu-tts:staging
