idblu_tts_wrapper/k8s/staging/deployment-ready-responses-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idblu-tts-ready-responses
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  template:
    metadata:
      labels:
        app.kubernetes.io/environment: staging
    spec:
      nodeSelector:
        workload: accelerated
        accelerator: nvidia
      volumes:
        - name: model-cache
          persistentVolumeClaim:
            claimName: idblu-tts-model-cache-staging
      containers:
        - name: idblu-tts
          image: 449678530532.dkr.ecr.ca-central-1.amazonaws.com/idblu-tts:staging
