idblu_tts_wrapper/k8s/staging/ingress-ready-responses-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idblu-tts-ready-responses-private
  annotations:
    alb.ingress.kubernetes.io/group.name: idblu-tts
    external-dns.alpha.kubernetes.io/hostname: idblu-tts-ready-responses-staging.internal.account.idblu.com
spec:
  rules:
    - host: idblu-tts-ready-responses-staging.internal.account.idblu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idblu-tts-ready-responses
                port:
                  number: 80
